--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Replace Discord Links",
-    "version": "1.1.0",
+    "version": "2.0.0-dev",
     "description": "Replace the subdomain of discord links to a custom one or none",
-    "author": "ルナ#8888",
+    "author": "Luny#8888",
     "license": "MIT",
     "nsfw": false,
     "discord": "yYd6YKHQZH"
